<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background"
    tools:context=".ui.editTodo.EditTodoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/todo_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/add_todo_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/toolbar_color"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/text_color">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/edit_task"
                    android:textColor="@color/text_color"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/back_button"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <EditText
            android:id="@+id/todo_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/secondary_background"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/icon_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_todo_toolbar"
            tools:ignore="Autofill,LabelFor,TextFields"
            tools:text="Demo Text" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sub_task_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:minHeight="350dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todo_title"
            tools:itemCount="1"
            tools:listitem="@layout/item_edit_sub_task" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_sub_task_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            style="?android:attr/borderlessButtonStyle"
            android:backgroundTint="@color/secondary_background"
            android:drawableLeft="@drawable/ic_add"
            android:padding="10dp"
            android:drawableTint="@color/text_color_secondary"
            android:elevation="0dp"
            android:text="@string/add_sub_task"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/text_color_secondary"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/sub_task_recyclerview" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1.4dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/text_color_secondary"
            app:layout_constraintTop_toBottomOf="@id/add_sub_task_button" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/todo_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/secondary_background"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@id/view2">

            <Button
                android:id="@+id/todo_date_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:clickable="false"
                android:drawableLeft="@drawable/ic_calendar"
                android:drawableTint="@color/text_color_secondary"
                android:text="@string/due_date"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/text_color_secondary"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/todo_date_textview"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/todo_date_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/black"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="2021/10/15" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1.4dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/text_color_secondary"
            app:layout_constraintTop_toBottomOf="@id/todo_date" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/todo_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/secondary_background"
            app:layout_constraintTop_toBottomOf="@id/view1">

            <Button
                android:id="@+id/todo_time_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:clickable="false"
                android:drawableLeft="@drawable/ic_clock"
                android:text="@string/time_and_remainder"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:drawableTint="@color/text_color_secondary"
                android:textColor="@color/text_color_secondary"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/todo_time_textview"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/todo_time_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/black"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/no"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1.4dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/text_color_secondary"
            app:layout_constraintTop_toBottomOf="@id/todo_time" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_todo_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/text_color_secondary"
            android:backgroundTint="@color/secondary_background"
            android:padding="10dp"
            android:text="@string/save_todo"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/view3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>